multiple changes + fixes

--- a/about.html
+++ b/about.html
@@ -108,28 +108,30 @@
                 <img src="assets/images/about-page/hero-section-img/about-hero-img-1.webp" class="d-block w-100"
                     alt="...">
                 <div class="carousel-caption text-center">
-                    <h1>CHEMICALS AND CATTLE FIELD FERTILIZER</h1>
-                    <p>When it comes to petroleum and biofuel, we've got you covered. Our products are shipped
-                        worldwide, and you can trust that the quality is always up to standard.</p>
+                    <h1>GLOBAL ACCESSIBILITY</h1>
+                    <p>We pride ourselves on our extensive reach across continents, establishing robust partnerships
+                        with suppliers and buyers worldwide. This enables us to source the finest commodities and raw
+                        food products, ensuring quality and reliability in every transaction.</p>
                 </div>
             </div>
             <div class="carousel-item carousel-item-custom-height">
                 <img src="assets/images/about-page/hero-section-img/about-hero-img-2.webp" class="d-block w-100"
                     alt="...">
                 <div class="carousel-caption text-center">
-                    <h1>COMMODITIES AND FOOD PRODUCTS</h1>
-                    <p>When it comes to petroleum and biofuel, we've got you covered. Our products are shipped
-                        worldwide, and you can trust that the quality is always up to standard.</p>
+                    <h1>VAST SUPPLY CHAIN</h1>
+                    <p>Our dedicated team is adept at navigating the complexities of the supply chain. From procurement
+                        to delivery, we optimise every step, guaranteeing efficiency and timely delivery. Our meticulous
+                        approach ensures that our clients receive products of the highest standards.</p>
                 </div>
             </div>
             <div class="carousel-item carousel-item-custom-height">
                 <img src="assets/images/about-page/hero-section-img/about-hero-img-3.webp" class="d-block w-100"
                     alt="...">
                 <div class="carousel-caption text-center">
-                    <h1>PETROLEUM AND BIO FUEL</h1>
-                    <p>Are you looking for top-quality agriculture commodities and food products? Look no further!
-                        We ship our products all over the world, and our quality meets all the necessary
-                        requirements.</p>
+                    <h1>QUALITY ASSURANCE</h1>
+                    <p>Quality is paramount. We implement stringent quality control measures throughout the supply chain
+                        to uphold the integrity of the products we trade. Our commitment to excellence is reflected in
+                        the satisfaction of our clients who trust us for superior commodities and raw food supplies.</p>
                 </div>
             </div>
         </div>
@@ -196,8 +198,8 @@
             <button class="about-page-tab-section-tab active" onclick="showTabContent('vision')">Vision</button>
             <button class="about-page-tab-section-tab" onclick="showTabContent('mission')">Mission</button>
             <button class="about-page-tab-section-tab" onclick="showTabContent('value')">Value</button>
-            <button class="about-page-tab-section-tab" onclick="showTabContent('core-value')">Core Value</button>
-            <button class="about-page-tab-section-tab" onclick="showTabContent('value-chain')">Value Chain</button>
+            <!-- <button class="about-page-tab-section-tab" onclick="showTabContent('core-value')">Core Value</button> -->
+            <!-- <button class="about-page-tab-section-tab" onclick="showTabContent('value-chain')">Value Chain</button> -->
         </div>
 
         <div class="about-page-tab-section-content">
@@ -268,7 +270,7 @@
             </div>
 
             <!-- Core Value Content -->
-            <div id="core-value" class="about-page-tab-section-content-item">
+            <!-- <div id="core-value" class="about-page-tab-section-content-item">
                 <div class="row">
                     <div class="col-md-3">
                         <img src="./assets/images/about-page/our-vision-img/our-vision-img-1.webp" alt="Vision"
@@ -287,10 +289,10 @@
                             eius cumque.</p>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Value Chain Content -->
-            <div id="value-chain" class="about-page-tab-section-content-item">
+            <!-- <div id="value-chain" class="about-page-tab-section-content-item">
                 <div class="row">
                     <div class="col-md-3">
                         <img src="./assets/images/about-page/our-vision-img/our-vision-img-2.webp" alt="Vision"
@@ -309,7 +311,7 @@
                             eius cumque.</p>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
@@ -317,9 +319,9 @@
 
     <section class="leadership pt-5 pb-7">
         <div class="container">
-            <div class="leadership-content-top text-center">
-                <h2>Leadership & Key Management Team</h2>
-                <p>Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at. </p>
+            <div class="leadership-content-top">
+                <h2 class="text-center gray-text">Leadership & Key Management Team</h2>
+                <p class="text-center">Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at. </p>
             </div>
 
             <div class="row justify-content-center">
@@ -330,7 +332,8 @@
                                 <img src="assets/images/about-page/leadership-icon/image 14.png" alt="">
                                 <h6 class="card-title">BOARD OF DIRECTORS - <!-- <br> -->LEADERS</h6>
                             </div>
-                            <p class="card-text-leader text-dark">Our “Leaders - The Board of Directors” oversees
+                            <p class="card-text-leader text-dark">Our <i class="dark-blue-text"><b>“Leaders - The Board
+                                        of Directors”</b></i> oversees
                                 our strategy, capital allocation and investment decisions. It oversees every aspect
                                 of our performance, risk management, compliance, control and assurance framework,
                                 audit, people and sustainability through regular discussions with the Management
@@ -537,6 +540,122 @@
                         download
                     </span>
                 </button>
+            </div>
+        </div>
+    </section>
+
+    <!-- FAQ SECTION -->
+
+    <section class="faq pt-5 pb-5">
+        <div class="container">
+            <div class="text-center">
+                <H2>FREQUENTLY ASKED QUESTIONS</H2>
+                <P class="text-center">Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at.</P>
+            </div>
+            <div class="faq-con-img d-flex">
+                <div class="container h-75 w-md-75 text-light">
+                    <div class="accordion faq-container p-4" id="accordionExample">
+                        <div class="accordion-item faq-tab">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    What is BVM Grand's role in global trade?
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>Lorem ipsum dolor sit amet. </strong>Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit.
+                                    At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item faq-tab">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    What is BVM Grand's role in global trade?
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>Lorem ipsum dolor sit amet. </strong>Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit.
+                                    At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item faq-tab">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseTwo">
+                                    What is BVM Grand's role in global trade?
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>Lorem ipsum dolor sit amet. </strong>Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit.
+                                    At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item faq-tab">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseTwo">
+                                    What is BVM Grand's role in global trade?
+                                </button>
+                            </h2>
+                            <div id="collapseFour" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>Lorem ipsum dolor sit amet. </strong>Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit.
+                                    At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item faq-tab">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseTwo">
+                                    What is BVM Grand's role in global trade?
+                                </button>
+                            </h2>
+                            <div id="collapseFive" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>Lorem ipsum dolor sit amet. </strong>Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit.
+                                    At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item faq-tab">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseTwo">
+                                    What is BVM Grand's role in global trade?
+                                </button>
+                            </h2>
+                            <div id="collapseSix" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>Lorem ipsum dolor sit amet. </strong>Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit.
+                                    At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="faq-img pt-3">
+                    <img src="assets/images/our-services-icon-img/FAQ-IMG/Group 93.webp" alt="FAQ image" height="360px">
+                </div>
             </div>
         </div>
     </section>
