--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <body>
 
-    <!-- NAVBAR NEW -->
+    <!-- NAVBAR -->
 
     <nav class="navbar navbar-expand-lg custom-navbar fixed-top">
         <div class="container-fluid py-lg-3 px-5">
@@ -230,7 +230,7 @@
                 </div>
                 <div class="col-12 col-md-4 mb-3">
                     <div class="box-a text-bg-light">
-                        <img src="assets/images/home-page-images/about-us-card-image/home-page-about-us-card-img-2.webp"
+                        <img src="assets/images/home-page-images/about-us-card-image/home-page-about-us-card-img-2-alt.webp"
                             class="card-img-top" alt="We Serve Globally">
                         <h3 class="about-card-title text-dark">We Serve Globally</h3>
                         <p class="about-card-text text-black">At Bhagirath BVM Grand, we're dedicated to serving the
@@ -241,7 +241,7 @@
                 </div>
                 <div class="col-12 col-md-4 mb-3">
                     <div class="box-a text-bg-light">
-                        <img src="assets/images/home-page-images/about-us-card-image/home-page-about-us-card-img-3.webp"
+                        <img src="assets/images/home-page-images/about-us-card-image/home-page-about-us-card-img-3-alt.webp"
                             class="card-img-top" alt="Professional Excellence">
                         <h3 class="about-card-title text-dark">Professional Excellence</h3>
                         <p class="about-card-text text-black">Excellence is our way of life. We're a team of dedicated
