--- a/our-services.html
+++ b/our-services.html
@@ -150,39 +150,39 @@
   <section>
     <div class="container d-flex gap-3 our-services-top-card">
       <!-- Card 1 -->
-      <div class="card col-md-4 card-z mr-lg-4">
+      <div class="card col-lg-4 card-z mr-lg-4">
         <div class="d-flex p-4">
           <div class="col-3 d-flex align-items-start justify-content-center">
             <img src="assets/images/icons/icon1.png" alt="">
           </div>
           <div class="col-8">
-            <h3 class="card-title text-light">Quality Assurance</h3>
+            <h5 class="card-title text-light">Quality Assurance</h5>
             <p class="card-text text-light">Quality is our hallmark. We rigorously inspect and verify products to ensure
               they meet the highest standards.</p>
           </div>
         </div>
       </div>
       <!-- Card 2 -->
-      <div class="card col-md-4 card-z mr-lg-4">
+      <div class="card col-lg-4 card-z mr-lg-4">
         <div class="d-flex p-4">
           <div class="col-3 d-flex align-items-start justify-content-center">
             <img src="assets/images/icons/icon2.png" alt="">
           </div>
           <div class="col-8">
-            <h3 class="card-title text-light">Shipment</h3>
+            <h5 class="card-title text-light">Shipment</h5>
             <p class="card-text text-light">We understand importance of timely delivery. As soon as you place order, our
               efficient shipping kicks into gear.</p>
           </div>
         </div>
       </div>
       <!-- Card 3 -->
-      <div class="card col-md-4 card-z mr-lg-4">
+      <div class="card col-lg-4 card-z mr-lg-4">
         <div class="d-flex p-4">
           <div class="col-3 d-flex align-items-start justify-content-center">
             <img src="assets/images/icons/icon3.png" alt="">
           </div>
           <div class="col-8">
-            <h3 class="card-title text-light">Customised Soultions</h3>
+            <h5 class="card-title text-light">Customised Soultions</h5>
             <p class="card-text text-light">Our team tailors solutions to meet your specific needs, ensuring a seamless
               and efficient experience.</p>
           </div>
@@ -191,9 +191,11 @@
     </div>
   </section>
 
-  <!-- MIDDLE CARDS -->
+  <!-- MIDDLE CARDS (OLD) -->
 
   <section class="job-card">
+    <!-- <h2 class="text-center">OUR SERVICES</h2> -->
+    <!-- <p class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam, vero.</p> -->
     <div id="card-area">
       <div class="wrapper">
         <div class="box-area">
@@ -227,7 +229,6 @@
                 integrity of your goods throughout their journey.</p>
             </div>
           </div>
-
           <div class="box-job">
             <img src="assets/images/our-services-icon-img/cards/Rectangle 18 (4).webp" alt=""
               class="card-img-top img-fluid">
@@ -453,14 +454,12 @@
 
   <!-- FAQ SECTION -->
 
-  <section class="faq">
-
+  <!-- <section class="faq">
     <div class="container">
       <div class="text-center pt-5">
         <H2>FREQUENTLY ASKED QUESTIONS</H2>
         <P class="text-center">Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at.</P>
       </div>
-
       <div class="faq-con-img d-flex">
         <div class="container rounded h-75 w-75 m-5 text-light">
           <div class="accordion pb-4" id="accordionExample">
@@ -536,15 +535,116 @@
             </div>
           </div>
         </div>
-
         <div class="faq-img">
           <img src="assets/images/our-services-icon-img/FAQ-IMG/Group 93.webp" alt="FAQ image" height="300px">
         </div>
       </div>
+    </div>
+  </section> -->
 
+  <!-- FAQ SECTION (NEW) -->
+
+  <section class="faq pb-5">
+    <div class="container">
+      <div class="text-center pt-5">
+        <H2>FREQUENTLY ASKED QUESTIONS</H2>
+        <P class="text-center">Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at.</P>
+      </div>
+      <div class="faq-con-img d-flex">
+        <div class="container h-75 w-md-75 text-light">
+          <div class="accordion faq-container p-4" id="accordionExample">
+            <div class="accordion-item faq-tab">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  What is BVM Grand's role in global trade?
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>Lorem ipsum dolor sit amet. </strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item faq-tab">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  What is BVM Grand's role in global trade?
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>Lorem ipsum dolor sit amet. </strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item faq-tab">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseTwo">
+                  What is BVM Grand's role in global trade?
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>Lorem ipsum dolor sit amet. </strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item faq-tab">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseTwo">
+                  What is BVM Grand's role in global trade?
+                </button>
+              </h2>
+              <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>Lorem ipsum dolor sit amet. </strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item faq-tab">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseTwo">
+                  What is BVM Grand's role in global trade?
+                </button>
+              </h2>
+              <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>Lorem ipsum dolor sit amet. </strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item faq-tab">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseTwo">
+                  What is BVM Grand's role in global trade?
+                </button>
+              </h2>
+              <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>Lorem ipsum dolor sit amet. </strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  At eaque aliquid repellat commodi ullam eos numquam quo velit non dolorem.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="faq-img pt-3">
+          <img src="assets/images/our-services-icon-img/FAQ-IMG/Group 93.webp" alt="FAQ image" height="360px">
+        </div>
+      </div>
     </div>
   </section>
-
 
   <!-- FOOTER -->
 
