--- a/our-company.html
+++ b/our-company.html
@@ -261,16 +261,15 @@
     </div>
 
   </section>
-  <!-- make a our businss section  -->
 
-  <section class="our-business pt-5">
+  <!-- OUR BUSINESSES -->
+
+  <!-- <section class="our-business pt-5">
     <div class="container">
       <div class="our-business-top-content text-center">
         <h2>Our Businessess</h2>
         <p class="text-center">Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at. </p>
       </div>
-
-      <!-- make a row Card -->
       <div class="row pb-1">
         <div class="col-md-4 mb-1">
           <div class="our-business-card">
@@ -336,9 +335,7 @@
           </div>
         </div>
       </div>
-
       <div class="row">
-
         <div class="col-md-4 mb-1">
           <div class="our-business-card">
             <div class="our-business-img text-start">
@@ -359,17 +356,9 @@
               markets, expanding your reach and opportunities..</p>
           </div>
         </div>
-
-
-
-
-
-
       </div>
     </div>
-
-  </section>
-
+  </section> -->
 
   <!-- FOOTER -->
 
